<resources>
    <string name="app_name" translatable="false">app_serhiis</string>
    <string name="settings">Settings</string>
    <string name="name">name</string>
    <string name="career">Career</string>
    <string name="home_address">Home address</string>
    <string name="edit_profile">Edit profile</string>
    <string name="view_my_contacts">VIEW MY CONTACTS</string>
    <string name="let_s_get_acquainted">Let\'s get acquainted</string>
    <string name="fill_out_the_profile_and_go_to_the_application">Fill out the profile and go to the application!</string>
    <string name="e_mail">E-mail</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="password_cower">Enter your password</string>
    <string name="checkbox">Remember me</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="by_clicking_register_you_agree_to_our_terms_and_conditionst">By clicking Register you agree to our Terms \n and Conditions</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">register</string>
    <string name="wrong_email_or_password">\"Wrong e-mail or password \"</string>
    <string name="or">or</string>
    <string name="google" translatable="false">google</string>
    <string name="message_cannot_be_empty">Required field cannot be empty!</string>
    <string name="password_cant_be_less_than">Password can\'t be less than 8 </string>
    <string name="required_at_least_1_digit">Required at least 1 digit</string>
    <string name="password_must_contain_lower_case_letters">Password must contain lower case letters</string>
    <string name="password_must_contain_upper_case_letters">Password must contain upper case letters</string>
    <string name="_1_special_character_required">1 special character required</string>
    <string name="message_wromg_e_mail">Invalid email address, example name@mail.com</string>
    <string name="go_to_settings_and_fill_out_the_profile">Go to settings and fill out the profile</string>
    <string name="contacts">Contacts</string>
    <string name="add_contacts">Add contacts</string>
    <string name="message">MESSAGE</string>
    <string name="profile">Profile</string>
    <string name="save">SAVE</string>
    <string name="username">Username</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="Contact">Contact </string>
    <string name="is_deleted"> is deleted!</string>
    <string name="is_restored"> is restored!</string>
    <string name="is_add"> is add!</string>
    <string name="UNDO"> UNDO</string>
    <string name="stop_validation" translatable="false"> stop_validation</string>
    <string name="fake_mail" translatable="false">serhii.sierykh@gmail.com</string>
</resources>