<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewLetSGetAcquainted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textVieFillOutTheProfile"

            android:layout_centerHorizontal="true"
            android:fontFamily="@font/open_sans"
            android:padding="10dp"
            android:text="@string/let_s_get_acquainted"
            android:textColor="@color/gray_very_light"
            android:textSize="31sp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textVieFillOutTheProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textViewEMail"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/open_sans"
            android:padding="8dp"
            android:text="@string/fill_out_the_profile_and_go_to_the_application"
            android:textColor="@color/gray_very_light"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewEMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextEnterEmail"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/e_mail"
            android:textSize="18sp"
            android:theme="@style/MyTextStyle1" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextEnterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textViewPassword"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white_my"
            android:fontFamily="@font/open_sans"
            android:inputType="text"
            android:text="@string/enter_email"
            android:textColor="@color/gray_very_light"
            android:textSize="18sp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextTextPassword"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="8dp"
            android:text="@string/password"
            android:theme="@style/MyTextStyle1" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/checkBoxRemember"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white_my"
            android:ems="10"
            android:inputType="textPassword"
            android:lines="@integer/material_motion_duration_long_2"
            android:text="@string/password_cower"
            android:textColor="@color/gray_very_light"
            android:textColorHint="@color/orange"
            android:textSize="18sp" />


        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBoxRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonRegister"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="23dp"
            android:backgroundTint="@color/white_my"
            android:buttonTint="@color/gray_very_light"
            android:duplicateParentState="false"
            android:focusable="auto"
            android:text="@string/checkbox"
            android:textColor="@color/white_my"
            android:theme="@style/MyTextStyle1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/textViewByClickingRegisterYou"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background_orange"
            android:fontFamily="@font/open_sans"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewByClickingRegisterYou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textViewAlreadyHaveAnAccount"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/by_clicking_register_you_agree_to_our_terms_and_conditionst"
            android:textSize="15sp"
            android:theme="@style/MyTextStyle1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewAlreadyHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/already_have_an_account"
            android:theme="@style/MyTextStyle1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewAlreadyHaveAnAccount"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/textViewAlreadyHaveAnAccount"
            android:background="@color/blue"
            android:fontFamily="@font/open_sans"
            android:text="@string/sign_in"
            android:textColor="@color/gray_very_light"
            android:textSize="18sp" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

