<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <View
        android:id="@+id/view_top_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/view_bottom_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.5" />

    <View
        android:id="@+id/view_bottom_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white_grey_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_top_container"
        app:layout_constraintVertical_weight="0.5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-63dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/settings"
            android:textColor="@color/white_grey_500"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/mok2"
            android:layout_width="113dp"
            android:layout_height="113dp"
            android:layout_below="@+id/settings"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/mok2" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mok2"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/name"
            android:textColor="@color/white_grey_500"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/career"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/career"
            android:textColor="@color/white_grey_500"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/career"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/home_address"
            android:textColor="@color/white_grey_500"
            android:textSize="14sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_profile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/view_my_contacts"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_background"
            android:text="@string/edit_profile" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/view_my_contacts"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/orange"
            android:text="@string/view_my_contacts"
            android:textColor="@color/white_grey_500"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_facebook_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_instagram_log"
            android:layout_marginStart="50dp"
            app:srcCompat="@drawable/ic_facebook_log" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_instagram_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edit_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/ic_instagram_log" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_vk_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_instagram_log"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            app:srcCompat="@drawable/ic_vk_log" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

